external/lib25519-20241004/build/arm64/unified/fe25519subS/1/shared/result-compile-fe25519_sub
fe25519_sub.S:40:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
